--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <div>
+        <ul>
+            <li><a href="recipes/spicy-sushi-roll.html">Spicy Sushi Roll</a></li>
+            <li><a href="recipes/sushi.html">Sushi</a></li>
+            <li><a href="recipes/sushi.html">Sushi</a></li>
+        </ul>
+        
+    </div>
 </body>
 </html>
