--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
     <div>
         <ul>
-            <li><a href="recipes/spicy-sushi-roll.html">Spicy Sushi Roll</a></li>
-            <li><a href="recipes/sushi.html">Sushi</a></li>
-            <li><a href="recipes/sushi.html">Sushi</a></li>
+            <li><a href="recipes/spicy-sushi-roll.html" target="_blank">Spicy Sushi Roll</a></li>
+
+            <li><a href="recipes/easy-meatloaf.html" target="_blank">Easy Meatloaf</a></li>
+
+            <li><a href="recipes/best-buckwheat-pancakes.html" target="_blank">Best Buckwheat Pancakes</a></li>
         </ul>
         
     </div>
