recipes/best-buckwheat-pancakes.html

--- a/recipes/spicy-sushi-roll.html
+++ b/recipes/spicy-sushi-roll.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sushi</title>
+    <title>Spicy Sushi Roll Recipe</title>
 </head>
 <body>
     <h1>Spicy Sushi Roll</h1>
@@ -19,13 +19,13 @@
     <div>
         <h3>Ingredients</h3>
         <ul>
-            <li><sup>1/4</sup>cup mayonnaise</li>
+            <li>&frac14; cup mayonnaise</li>
             <li>1 tablespoon chile sauce</li>
-            <li>1<sup>1/2</sup>teaspoons togarashi (Japanese seven spice)</li>
+            <li>1&frac12; teaspoons togarashi (Japanese seven spice)</li>
             <li>1 teaspoon prepared wasabi</li>
             <li>1 teaspoon chili powder</li>
             <li>1 teaspoon paprika</li>
-            <li>3 (3 ounce) fillets imitation crabmeat, cut into 1 1/2-inch pieces</li>
+            <li>3 (3 ounce) fillets imitation crabmeat, cut into 1&frac12;-inch pieces</li>
             <li>2 cups cooked sushi rice</li>
             <li>3 sheets nori (dry seaweed)</li>
             <li>3 sheets nori (dry seaweed)</li>
