--- a/recipes/best-buckwheat-pancakes.html
+++ b/recipes/best-buckwheat-pancakes.html
@@ -19,15 +19,15 @@
     <div>
         <h3>Ingredients</h3>
         <ul>
-            <li>1<sup>1/2</sup>pounds ground beef</li>
+            <li>1 cup buttermilk</li>
             <li>1 egg</li>
-            <li>1 onion, chopped</li>
-            <li>1 cup milk</li>
-            <li>1 cup dried bread crumbs</li>
-            <li>salt and pepper to taste</li>
-            <li>2 tablespoons brown sugar</li>
-            <li>2 tablespoons prepared mustard</li>
-            <li><sup>1/3</sup>cup ketchup</li>
+            <li>3 tablespoons butter, melted</li>
+            <li>6 tablespoons all-purpose flour</li>
+            <li>6 tablespoons buckwheat flour</li>
+            <li>1 teaspoon white sugar</li>
+            <li>&frac12; teaspoon salt</li>
+            <li>1 teaspoon baking soda</li>
+            <li>3 tablespoons butter</li>
         </ul>
     </div>
 
