--- a/recipes/easy-meatloaf.html
+++ b/recipes/easy-meatloaf.html
@@ -19,7 +19,7 @@
     <div>
         <h3>Ingredients</h3>
         <ul>
-            <li>1<sup>1/2</sup>pounds ground beef</li>
+            <li>1&frac12; pounds ground beef</li>
             <li>1 egg</li>
             <li>1 onion, chopped</li>
             <li>1 cup milk</li>
@@ -27,7 +27,7 @@
             <li>salt and pepper to taste</li>
             <li>2 tablespoons brown sugar</li>
             <li>2 tablespoons prepared mustard</li>
-            <li><sup>1/3</sup>cup ketchup</li>
+            <li>&frac13; cup ketchup</li>
         </ul>
     </div>
 
